--- a/templates/action-connectivity.html
+++ b/templates/action-connectivity.html
@@ -1,3 +1,3 @@
 <li data-ng-controller="W20ConnectivityActionController">
-    <a style="line-height: 18px;" data-ng-click="checkConnectivity()" title="Recheck connectivity"><span data-ng-class="'connectivity-' + state()">●</span> {{ ('w20.ui.action.connectivity.' + state()) | localize }}</a>
+    <a style="line-height: 18px;" data-ng-click="checkConnectivity()" title="Recheck connectivity"><span data-ng-class="'connectivity-' + state()">●</span> {{ ('w20.material.action.connectivity.' + state()) | localize }}</a>
 </li>
