--- a/templates/action-login.html
+++ b/templates/action-login.html
@@ -1,5 +1,5 @@
 <li data-ng-controller="W20LoginActionController">
-    <a data-ng-if="!subjectAuthenticated()" data-ng-click="authenticate()"><i class="glyphicon glyphicon-user"></i> {{ 'w20.ui.action.login' | localize }}</a>
+    <a data-ng-if="!subjectAuthenticated()" data-ng-click="authenticate()"><i class="glyphicon glyphicon-user"></i> {{ 'w20.material.action.login' | localize }}</a>
     <a data-ng-if="subjectAuthenticated()" data-ng-switch data-on="subjectType()">
         <span data-ng-switch-when="user"><i class="icon-user icon-white glyphicon glyphicon-user"></i> {{ subjectPrincipals().fullName || subjectId() }}</span>
         <span data-ng-switch-when="device"><i class="icon-hdd icon-white glyphicon glyphicon-hdd"></i> {{ subjectId() }}</span>
